# DE_Tools

./: .gitignore  README.md  pyproject.toml
.history/: .gitignore_20250323161820  .gitignore_20250323161842  .gitignore_20250323161929  README_20250209093508.md  README_20250324072424.md  README_20250324072709.md
.history/0A_preparation/: README_20240621162756.md  schema_20240621161155.sql
.history/0A_preparation/src/: README_20240621162322.md  README_20240621162450.md  README_20240621162559.md  README_20240621202035.md  cleaning_20240621163605.py  cleaning_20240621163608.py  (+5 more)
.history/Explorations/: notes_20250324212336.md
.history/docs/: notes_20250322083824.md  notes_20250322210307.md
.history/storage/: README_20250322082644
01_interest/Json_folder/: working_json_test.ipynb
ETL_Example/src/: cleaning.py  load.py  transform.py
Excel_Examples/: Update Table.xlsm  index_match_match.xlsx  index_match_two.xlsx  pivot table example.xlsx
Explorations/Aggregation/: main.ipynb
Explorations/ETL/: README.md
Explorations/Other/: sql_alchemy.ipynb
Explorations/PostgreSQL/: Creating.ipynb
Explorations/SQLite/: ER_Diagrams.ipynb  Parameterised_Queries.ipynb  test.ipynb
Normalisation_Example/: file.xlsx  file2.xlsx  main.py  normal.accdb
Normalisation_Example/.history/: main_20240612081526.py  main_20240612081835.py  main_20240612082009.py  main_20240612082019.py  main_20240612082144.py  test_20240612191325.py
Python Excel Examples/: ideas.txt
Snippets/: plot_simple_graph.py
Snippets/Json_folder/: Rjson_test2.py  json_test2.ipynb
docs/: notes.md
(+93 files in other folders)
