[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Rhys Wells",email = "rhyslwells@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "gspread (>=6.2.0,<7.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "google-api-python-client (>=2.165.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "pydot (>=3.0.4,<4.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]

[tool.poetry]
packages = [{include = "my_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
